# distributed_parser

./: .env  .env.example  README.md  cmds  cmds.txt  docker-compose.yml  k8s.txt  makefile  tasks.txt
ansible/: playbook.yml  readme.md  stop_docker_containers.yml  stop_k8s_containers.yml  wget-log
cassandra/: Dockerfile  cassandra-config.yaml  setup.cql
coordinator/: CMakeLists.txt  Dockerfile  Makefile  coordinator.cpp  coordinator.h  main.cpp
docker/: Dockerfile.grpc  Dockerfile.prestart  Dockerfile.vcpkg
kubernetes/: cassandra-service.yaml  cassandra-statefulset.yaml  coordinator-deployment.yaml  env-configmap.yaml  worker-deployment.yaml
kubernetes/cassandra/: cassandra-deployment.yaml  cassandra-pv.yaml  cassandra-pvc.yaml  cassandra-service.yaml  cassandra-statefulset.yaml
kubernetes/cassandra_web/: cassandra_web-deployment.yaml  cassandra_web-service.yaml
kubernetes/coordinator/: coordinator-deployment.yaml  coordinator-service.yaml
kubernetes/worker/: worker-deployment.yaml  worker-hpa.yaml  worker-service.yaml
proto_files/: task.proto
scripts/: build_all.sh  deploy_kubernetes.sh  generate_protos.sh  run_coordinator.sh  run_worker.sh  stop_all_docker_containers.sh  stop_all_k8s_containers.sh
worker/: CMakeLists.txt  Dockerfile  Makefile  html_parser.cpp  html_parser.h  main.cpp  page_fetcher.cpp  page_fetcher.h  worker.cpp  worker.h
